--- a/rustblog1.css
+++ b/rustblog1.css
@@ -2,8 +2,6 @@
     body {
         background-color: transparent;
         color: #454138;
-        font-family: 'helvetica', sans-serif;
-        font-weight: lighter;
         height: 800px;
         margin: auto;
         width: 700px;
@@ -12,5 +10,9 @@
     div {
         background-color: #bab5a1;
         border: 10px solid black;
+    }
+
+    p {
+        font-family: 'Merriweather', serif;
     }
 }
