--- a/rustblog1.css
+++ b/rustblog1.css
@@ -1,19 +1,56 @@
 @media all {
     body {
-        background-color: transparent;
-        color: #454138;
-        height: 800px;
+        background-color: whitesmoke;
+        height: 1000px;
         margin: auto;
-        width: 700px;
+        width: 1250px;
+        color: black;
     }
 
-    div {
-        background-color: #bab5a1;
-        border: 10px solid black;
+    h1 {
+        background-color: rgb(255, 255, 255);
+        padding: 10px;
+        text-align: center;
+        font-family: 'Merriweather', serif;
+        font-weight: 900;
+    }
+
+    h2 {
+
+        text-align: center;
+        font-family: 'Merriweather', serif;
+        font-weight: 700;
+    }
+
+    h3 {
+        background-color: rgb(190, 190, 190);
+        background-position: 12%;
+        font-family: 'Merriweather', serif;
+        font-weight: 400;
+    }
+
+    img {
+        height: 600px;
+        width: 900px;
+    }
+
+    #nullPoint {
+        height: 300px;
+        width: 900px;
+    }
+
+    #environ {
+        height: 300px;
+        width: 300px;
     }
 
     p {
         font-family: 'Merriweather', serif;
-        
+        font-weight:300;
+    }
+
+    div {
+        padding-bottom: 5%;
+        padding-top: 5%;
     }
 }
